# nextgen_game_engine

./: .bazelrc  .clang-format  .clang-tidy  .gitignore  .sublime-project  MODULE.bazel  README.md  Taskfile.yml  WORKSPACE  meson.build  output_project_in_one_txt.sh  prompt  prompt-gpt4  refresh_compile_commands.sh  todo.md  vulkan_tutorial_loadmodel_reference_example.cpp.txt  watch_build_files.sh
.clwb/: .bazelproject
.trunk/: trunk.yaml
benchmarks/: BUILD  README.md  config_manager_move.h  engine_classes_sizes.cc  move_semantic_versus_references.cc  raw_ref_versus_smart_pointers.cc  raw_ref_versus_smart_pointers.md  singleton_direct_access.cc  templated_structure_accessor.cc
benchmarks/raw_ref_versus_smart_pointers/: README.md  raw_ref_versus_smart_pointers.h  raw_ref_versus_smart_pointers_benchmark.cc  raw_ref_versus_smart_pointers_test.cc
components/configuration/: BUILD  config_loader.cc  config_loader.h  config_manager.cc  config_manager.h  config_manager_benchmark.cc  config_manager_globals.cc  config_manager_globals.h  config_manager_test.cc  config_service.h
components/configuration/manager/: config_manager_template.h
components/configuration/managers/: config_manager_template.h  rendering_engine_config_manager.h  vulkan_rendering_api_config_manager.h
components/configuration/orchestrator/: config_orchestrator.cc  config_orchestrator.h  config_orchestrator_template.h
components/configuration/repository/: config_loader.cc  config_loader.h  config_repo.cc  config_repo.h
components/configuration/tests/: config_manager_test.cc  config_orchestrator_test.cc  config_repo_test.cc
components/engine/: BUILD  nextgen_game_engine.cc  nextgen_game_engine.h  nextgen_game_engine_interfaces.h  nextgen_game_engine_results.h  nextgen_game_engine_templates.h  nextgen_game_engine_test.cc
components/job_system/: BUILD  run.sh
components/job_system/src/: job.h
components/job_system/tests/: tbb_with_job_interface.cpp  tests_constants.h
components/rendering/: BUILD  rendering.cc  rendering.h  rendering_api.h  rendering_config.h  rendering_config_strategy.cc  rendering_config_strategy.h  rendering_config_strategy_default.cc  rendering_config_strategy_default.h  rendering_config_strategy_primary.cc  rendering_config_strategy_primary.h  rendering_config_sub_strategy_selector.cc  rendering_config_sub_strategy_selector.h  rendering_config_validator.cc  rendering_engine.cc  rendering_engine.h  rendering_engine_switch_api.cc  test_shader.frag  test_shader.vert
components/rendering/config_strategy/: rendering_config_strategy.cc  rendering_config_strategy.h  rendering_config_strategy_default.cc  rendering_config_strategy_default.h  rendering_config_strategy_primary.cc  rendering_config_strategy_primary.h  rendering_config_sub_strategy_selector.cc  rendering_config_sub_strategy_selector.h  rendering_config_validator.cc  rendering_config_validator.h
components/rendering/directx/: directx_config_strategy.h
components/rendering/vulkan/: BUILD  vulkan_command_pool.h  vulkan_config.h  vulkan_config_strategy.cc  vulkan_config_strategy.h  vulkan_context.h  vulkan_device.cc  vulkan_device.hh  vulkan_device_priority.c  vulkan_device_priority.h  vulkan_frame_buffers.h  vulkan_init.cc  vulkan_init.h  vulkan_instance.cc  vulkan_instance.h  vulkan_operations.c  (+8 more)
data/: README.md
doc/: AudioEngine.md  ConfigurationManagement.md  Databases.md  GameFlow.md  GameWorldManagement.md  Networking.md  Overview.md  RenderingEngine.md  RustParallelComputing.md  UIUXSystem.md
doc/patterns/: DevelopmentGuide.md  Facade.md  PimplIdiom.md  StrategyComposition.md  StrategyPattern.md
lib/: BUILD  std_ext.cc  std_ext.h
subprojects/: rendering.wrap
subprojects/analytics_telemetry/: .meson.build  DESIGN.md  analytics_telemetry_api.rs  prompt  prompt-gpt4  run.sh
subprojects/audio/: .gitignore  meson.build  prompt  prompt-gpt4  run.sh
subprojects/configuration/: DESIGN.md  README.md  meson.build  rust-project.json
subprojects/configuration/src/: config_manager.h  configuraion.cc  configuration.rs
subprojects/configuration/tests/: config_manager_test.cc
subprojects/engine/: meson.build  rust-project.json
subprojects/engine/src/: engine.rs
subprojects/game_world/: meson.build.bak  prompt  prompt-gpt4  run.sh
subprojects/input/: DESIGN.md  meson.build.bak  prompt  prompt-gpt4  run.sh
subprojects/job_system/: .cproject  .project  core_detector.cpp  core_detector.h  job_manager.cpp  job_manager.h  job_queue.cpp  main.cpp  meson.build  prompt  prompt-gpt4  run.sh  thread_pool_manager.h
subprojects/job_system/.gpteng/memory/: all_output.txt  gen_entrypoint_chat.txt
subprojects/job_system/src/: job.h
subprojects/job_system/src/backend/custom_impl/: core_detector.cpp  core_detector.h  job_manager.cpp  job_queue.cpp  job_queue.h  thread_pool_manager.cpp  thread_worker.cpp  thread_worker.h
subprojects/job_system/tests/: custom_impl.cpp  pure_fibers.cpp  pure_tbb.cpp  tbb_with_job_interface.cpp
subprojects/networking/: meson.build  prompt  prompt-gpt4  run.sh
subprojects/physics/: DESIGN.md  files  prompt  prompt-gpt4  run.sh
subprojects/rendering/: .gitignore  DESIGN.md  README.md  clang_cross_file.txt  meson.build  prompt  prompt-gpt4  run.sh  rust-project.json
subprojects/rendering/.gpteng/memory/: all_output.txt  gen_entrypoint_chat.txt
subprojects/rendering/lib/vulkan_impl/: vulkan_operations.c  vulkan_operations.h
subprojects/rendering/src/: game_mechanics.rs  graphics_abstractor.rs  input_management.rs  main.rs  rendering.rs  scene_management.rs  timeline_management.rs  vulkan_api.rs
subprojects/resource/: Cargo.toml  DESIGN.md  asset_cache.rs  asset_handle.rs  asset_loader.rs  hot_reloader.rs  lib.rs  meson.build  prompt  prompt-gpt4  run.sh
subprojects/resource/.gpteng/memory/: all_output.txt  gen_entrypoint_chat.txt
subprojects/scripting/: DESIGN.md  prompt  prompt-gpt4  run.sh  structure
subprojects/test/: meson.build  rust-project.json
subprojects/test/src/: main.rs
subprojects/uiux/: DESIGN.md  meson.build  prompt  prompt-gpt4  run.sh
(+205 files in other folders)
