project('nextgen_game_engine',
  version : '0.1'
)

# Main project doesn't directly fetch dependencies here, but you need to declare subprojects
subproject('rendering')
# subproject('physics')
# subproject('audio')
# subproject('network')
# subproject('resource')
# subproject('scripting')
# subproject('uiux')
# subproject('game_world')
# subproject('analytics_telemetry')
