project('nextgen_game_engine', version: '0.1')

# subproject('analytics_telemetry')
# subproject('audio')
subproject('configuration')
# subproject('engine')
# subproject('game_world')
# subproject('input')
subproject('job_system')
# subproject('networking')
# subproject('physics')
# subproject('rendering')
# subproject('resource')
# subproject('scripting')
# subproject('test')
# subproject('uiux')
